--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.11"
+    "axios": "^1.7.7",
+    "axios-extra": "^0.0.8",
+    "element-plus": "^2.8.5",
+    "pinia": "^2.2.4",
+    "promise-queue-plus": "^1.2.2",
+    "spark-md5": "^3.0.2",
+    "vue": "^3.5.11",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
